i finished footer section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@ structured by design.</h3>
 
 </section>
 
+
+<section class="early-section">
+    <div class="early-info">
+        <h3 >Ready to think more clearly?</h3>
+        <p class="sol-4"> Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.</p>
+
+            <button class="btn-4"> Get Early Access</button>
+            <p class="sol-4">Free during early access • No credit card needed</p>
+    </div>
+</section>
+<footer >
+    <section class="footer-container">
+        <div class="footer-info">
+            <div class="logo">
+                <img src="assets/logo-navbar.png" alt="">
+            </div>
+            <div class="footer-link"> 
+                <h4> Social Links</h4>
+            </div>
+            <div class="social-link">
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+            </div>
+            <hr>
+            <div> <p>© 2026 Personal Knowledge Vault. All rights reserved.</p></div>
+        </div>
+    </section>
+
+</footer>
     
 </body>
 
